fix: made editor tool bar scrollable on mobile view

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -543,4 +543,15 @@ body.mode-preview .write-label {
     .editor-pane-right {
         display: none;
     }
+
+    .md-toolbar {
+        overflow-x: auto;
+        scrollbar-width: none;
+        flex-wrap: nowrap;
+        gap: 15px;
+    }
+
+    .md-toolbar::-webkit-scrollbar {
+        display: none;
+    }
 }
